<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item 
        android:id="@+id/ic_map"
        android:orderInCategory="100"
        android:icon="@drawable/ic_map"
        android:showAsAction="always"
        android:title="@string/action_map"/>
    <item 
        android:id="@+id/ic_compass"
        android:orderInCategory="100"
        android:icon="@drawable/ic_compass"
        android:showAsAction="always"
        android:title="@string/action_compass"/>

    <item 
        android:id="@+id/ic_camera"
        android:orderInCategory="100"
        android:icon="@drawable/ic_camera"
        android:showAsAction="always"
        android:title="@string/action_camera"/>

    <item 
        android:id="@+id/ic_notes"
        android:orderInCategory="100"
        android:icon="@drawable/ic_notes"
        android:showAsAction="always"
        android:title="@string/action_notes"/>
</menu>
